Introduce `PlatformFunction`, a `SkyFunction` to analyze a platform configured target and parse its flags.
Essentially replaces `PlatformInfoProducer` and `PlatformFlagsProducer` with `PlatformFunction` and the lightweight `PlatformProducer`.

This strategy reduces the number of Skyframe edges created during analysis. Currently, `PlatformInfoProducer` adds two edges (`PACKAGE`, `CONFIGURED_TARGET`), and `PlatformFlagsProducer` adds two more (`REPOSITORY_MAPPING`, `PARSED_FLAGS`). This change reduces all of that to just one (`PLATFORM`).

This edge reduction will help to remove `BuildConfigurationKeyCache`, which is currently reducing Skyframe edges at the cost of correctness.

PiperOrigin-RevId: 669337133
Change-Id: I92f46b3a26db6edff2295ea5c999b31bd84ba288